<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShopWise</string>
    <string name="app_catchphrase">Making Shopping a Little Easier</string>
    <string name="empty"></string>
    <string name="devmodeon">Note!!! Developer Mode is ON\n\n
        This indicates that this is not a release version.
    </string>
    <string name="colorswatch_primary_label">Pr</string>
    <string name="colorswatch_H1_label">H1</string>
    <string name="colorswatch_H2_label">H2</string>
    <string name="colorswatch_H3_label">H3</string>
    <string name="colorswatch_H4_label">H4</string>
    <string name="colorswatch_optional">O</string>
    <string name="colorswatch_required">R</string>
    <string name="actionbuttonclick">actionButtonClick</string>
    <string name="sortclick">sortClick</string>
    <string name="listitemclick" tools:ignore="UnusedResources">listItemClick</string>
    <string name="optionsmenu_actionbutton_heading">Option</string>
    <string name="optionsmenu_actioninfo_heading">Use</string>
    <string name="optionsmenu_rowcount_heading">Count</string>
    <string name="shopslabel">Shops</string>
    <string name="shoplabel">Shop</string>
    <string name="shopnamelabel">Shop Name</string>
    <string name="shopaddlabel">Shops - Add</string>
    <string name="shopeditlabel" tools:ignore="UnusedResources">Shops - Edit</string>
    <string name="citylabel">City</string>
    <string name="streetlabel" tools:ignore="UnusedResources">Street</string>
    <string name="statelabel" tools:ignore="UnusedResources">State</string>
    <string name="aisleslabel">Aisles</string>
    <string name="aislelabel">Aisle</string>
    <string name="aisleaddlabel">Aisle - Add</string>
    <string name="aisleeditlabel" tools:ignore="UnusedResources">Aisle - Edit</string>
    <string name="aislenamelabel">Aisle Name</string>
    <string name="productslabel">Products</string>
    <string name="productlabel">Product</string>
    <string name="productnamelabel">Product Name</string>
    <string name="productsaddlabel">Products - Add</string>
    <string name="productseditlabel">Products - Edit</string>
    <string name="purchasedlabel">Purchased</string>
    <string name="remaininglabel">Remaining</string>
    <string name="costlabel">Price</string>
    <string name="ruleslabel">Rules</string>
    <string name="stocklabel">Stock</string>
    <string name="stocklistlabel">Stock List</string>
    <string name="stockaddlabel">Stock Add</string>
    <string name="stockeditlabel">Stock Edit</string>
    <string name="rulelabel">Rule</string>
    <string name="ruleaddlabel">Rule - Add</string>
    <string name="ruleeditlabel">Rule - Edit</string>
    <string name="orderlabel">Order</string>
    <string name="orderslabel">Orders</string>
    <string name="noteslabel" tools:ignore="UnusedResources">Notes</string>
    <string name="filterlabel">Filter</string>
    <string name="stocklevellabel">Level</string>
    <string name="orderlevellabel" tools:ignore="UnusedResources">List#</string>
    <string name="checklistlabel">Check List</string>
    <string name="shoppinglabel">Shopping List</string>
    <string name="inshoppinglist"># In List</string>
    <string name="totalcostlabel">Total</string>
    <string name="remainingcostlabel">Left</string>
    <string name="spentlabel">Spent</string>
    <string name="quantitylabel">Quantity</string>
    <string name="nextdatelabel" tools:ignore="UnusedResources">Next on</string>
    <string name="promptlabel">Prompt</string>
    <string name="numbertogetlabel">Get</string>
    <string name="actonlabel">Add On</string>
    <string name="promptedruleslabel">Prompted Rules</string>
    <string name="toolslabel">Tools</string>
    <string name="toolsruleslabel">Tools Rules</string>
    <string name="storagelabel">Storage</string>
    <string name="storageaddlabel">Storage - Add</string>
    <string name="storageeditlabel">Storage - Edit</string>
    <string name="clickrowindicator">c</string>
    <string name="longclickrowindicator">l</string>
    <string name="backupdirectory">Backup Directory</string>
    <string name="datetimepart">Date/Time part</string>
    <string name="basepart">Base Filename</string>
    <string name="extension">File Extension</string>
    <string name="fullfilename">File Name in Full</string>
    <string name="restorefile">Restore File (select from the dropdown list)</string>
    <string name="backuplabel">Backup</string>
    <string name="availablebackupslabel">Available Backups</string>
    <string name="originalvalues">Original Values</string>
    <string name="ruledatelabel">Starts</string>
    <string name="ruledateextrainfo">(dd/mm/yyyy or blank)</string>
    <string name="ruleperiodlabel">Interval</string>
    <string name="rulemultiplierlabel">Multiplier</string>
    <string name="checklistflaglabel">Checklist</string>
    <string name="minperiodlabel">Min Period</string>
    <string name="minbuylabel">Min Bought</string>
    <string name="yes" tools:ignore="UnusedResources">Yes</string>
    <string name="no">No</string>
    <string name="word_for" tools:ignore="UnusedResources">for</string>
    <string name="rulesuggestlist">Rule Suggestions List</string>
    <string name="rulechecklist">Rule Accuracy Check List</string>
    <string name="ruledisabledlist">Disabled Rule List</string>
    <string name="listviewheadingoption_sortable">Sortable by Clicking Headings</string>
    <string name="notsortable">Sort Disabled</string>
    <string name="listviewheadingoption_clickable">Items are Clickable</string>
    <string name="listviewheadingoption_longclickable">Items are Long Clickable</string>
    <string name="donebutton">DONE</string>
    <string name="newbutton" tools:ignore="UnusedResources">NEW</string>
    <string name="addbutton">ADD</string>
    <string name="lessbutton">LESS</string>
    <string name="savebutton">SAVE</string>
    <string name="cancelbutton" tools:ignore="ButtonCase">CANCEL</string>
    <string name="deletebutton">DELETE</string>
    <string name="stockbutton">STOCK</string>
    <string name="adjustbutton">ADJUST</string>
    <string name="boughtbutton">BOUGHT</string>
    <string name="modifybutton">MODIFY</string>
    <string name="editbutton">EDIT</string>
    <string name="copybutton" tools:ignore="UnusedResources">COPY</string>
    <string name="movebutton" tools:ignore="UnusedResources">MOVE</string>
    <string name="order1button" tools:ignore="UnusedResources">ADD 1</string>
    <string name="orderallbutton" tools:ignore="UnusedResources">ADD</string>
    <string name="checkoffbutton">Check-off</string>
    <string name="uncheckbutton">UNCHECK</string>
    <string name="resetbutton">RESET</string>
    <string name="tidybutton">TIDY</string>
    <string name="undobutton">UNDO</string>
    <string name="skipbutton">SKIP</string>
    <string name="proceedbutton">PROCEED</string>
    <string name="backupbutton">BACKUP</string>
    <string name="restorebutton">RESTORE</string>
    <string name="rulesbutton">RULES</string>
    <string name="suggestbutton">SUGGEST</string>
    <string name="checkbutton">CHECK</string>
    <string name="disablebutton">DISABLE</string>
    <string name="disabledbutton">DISABLED</string>
    <string name="enablebutton">ENABLE</string>
    <string name="backupbasefilename">ShopWiseDB</string>
    <string name="backupfileextension">.bkp</string>
    <string name="backupdirectoryname">ShopWise</string>
    <string name="backupbusydialogtitle">Work in Progress</string>
    <string name="inputblank">"cannot be blank!"</string>
    <string name="notsaved">"was not saved."</string>
    <string name="addedok">"Successfully Added."</string>
    <string name="editedok">"Successfully Changed."</string>
    <string name="messagebar_prefix_lastaction">"Last action: %1$s"</string>
    <string name="availableoptions">"Available options are "\u0020</string>
    <string name="and">\u0020"and"\u0020</string>
    <string name="canceldoes">\u0020returns, doing nothing.</string>
    <string name="rulenametext">#%1$s</string>
    <string name="aislenametext">Aisle=%1$s</string>
    <string name="ruleastext" tools:ignore="PluralsCandidate">%1$d per %2$d days(%3$d in %4$d days, 1 per %5$s days)</string>
    <string name="rulestats" tools:ignore="PluralsCandidate">%1$d per %2$s (1 per %3$s days) Accuracy=%4$s%%</string>
    <string name="minbuydefault">5</string>
    <string name="minperioddefault">30</string>
    <string name="costdefault">0.00</string>
    <string name="full_file_name">%1$s%2$s%3$s</string>
    <string name="newline">"\n"</string>
    <string name="doublenewline">\n\n</string>
    <string name="tab1">\t</string>
    <string name="tab2" tools:ignore="UnusedResources">\t\t</string>
    <string name="minbuyinfo">At least this number must have been purchased</string>
    <string name="minperiodinfo">At least this many days between first and last purchase</string>
    <string name="backupoverview">
        Database backup and restore.
    </string>
    <string name="rulesoverview">
        Rule suggestion and accuracy checking.
    </string>
    <string name="rulesuggestionoverview">
        \nSUGGEST\n
        \tLists potential Rules according to shopping history.\n
        \tADD Adds the Rule.\n
        \tSKIP Temporarily removes the Rule from the List.\n
        \tDISABLE Permanently (see DISABLED below) removes the Rule from the list.\n\n
        CHECK\n
        \tLists existing Rules with the Rule\'s accuracy according to the Shopping history.\n
        \tAccuracy is shown as a percentage.\n
        \t\t100 is exact.\n
        \t\tLess than 100, the Rule adds too few.\n
        \t\tMore than 100, the Rule adds too many.\n
        \tMODIFY Edits the Rule.\n\n
        DISABLED\n
        \tList Rules that have been Disabled.\n
        \tENABLE Enables the Rule.\n\n
        NOTES\n
        \tDISABLED (only shown if there are Disabled Entries)\n\n
        \tMin Period and Min Bought may cause nothing to be shown.\n
        \tIf Min Bought and Min Period are both 0 then:-\n
        \t\tResults may be not reliable.\n
        \t\tSuggest will show all STOCK that does not have an existing Rule.\n
        \t\tCheck will show all RULES.\n
        \t\tResults may include NaN (Not a Number) due to divide by 0 handling.\n
        \t\tIt is inadvisable to rely on low values (hence 30 and 5 as defaults).\n
    </string>
    <string name="ruleaccuracycheck">
    </string>
    <string name="help_title">Help</string>
    <string name="heading_indicator">&heading;</string>
    <string name="tab1_indicator">&tab1;</string>
    <string name="tab2_indicator">&tab2;</string>
    <string name="title_help_main_activity">Main Display - Help</string>
</resources>