<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/ruletools_messagebar"
            style="@style/messagebar"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ruletools_topbutton_linearlayout"
        style="@style/standard_linearlayout">
        <TextView
            android:id="@+id/ruletools_donebutton"
            style="@style/actionbutton"
            android:layout_weight="18"
            android:text="@string/donebutton"
            />

        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="82"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ruletoolsminperiod_linearlayout"
        style="@style/standard_linearlayout"
        >
        <TextView
            android:id="@+id/ruletools_minperiod_label"
            style="@style/inputitemlabel"
            android:layout_weight="16"
            android:text="@string/minperiodlabel"/>
        <EditText
            android:id="@+id/ruletools_minperiod"
            style="@style/inputitem_order"
            android:layout_weight="10"
            android:hint="@string/empty"
            android:autofillHints="@string/empty"
            tools:targetApi="o" />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/ruletools_minperiod_info"
            style="@style/inputitemlabel"
            android:layout_weight="72"
            android:text="@string/minperiodinfo"
            android:textSize="@dimen/text_size_small"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ruletoolsminbuy_linearlayout"
        style="@style/standard_linearlayout"
        >
        <TextView
            android:id="@+id/ruletools_minbuy_label"
            style="@style/inputitemlabel"
            android:layout_weight="16"
            android:text="@string/minbuylabel"/>
        <EditText
            android:id="@+id/ruletools_minbuy"
            style="@style/inputitem_order"
            android:layout_weight="10"
            android:hint="@string/empty"
            android:autofillHints="@string/empty"
            tools:targetApi="o" />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/ruletools_minpbuy_info"
            style="@style/inputitemlabel"
            android:layout_weight="72"
            android:text="@string/minbuyinfo"
            android:textSize="@dimen/text_size_small"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/standard_linearlayout"
        >
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ruletools_buttons_linearlayout"
        style="@style/standard_linearlayout">
        <TextView
            android:id="@+id/ruletools_rulesuggestionbutton"
            style="@style/actionbutton"
            android:layout_weight="18"
            android:text="@string/suggestbutton"
            />

        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/ruletools_checkbutton"
            style="@style/actionbutton"
            android:layout_weight="18"
            android:text="@string/checkbutton"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/ruletools_disabledrulesbutton"
            style="@style/actionbutton"
            android:layout_weight="18"
            android:text="@string/disabledbutton"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="42"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ruletoolssuggestoverview_linearlayout"
        style="@style/standard_linearlayout"
        >
        <TextView
            android:id="@+id/ruletools_suggestoverview"
            style="@style/inputitemlabel"
            android:layout_weight="100"
            android:text="@string/rulesuggestionoverview"
            android:textSize="@dimen/text_size_small"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ruletoolscheckoverview_linearlayout"
        style="@style/standard_linearlayout"
        >
        <TextView
            android:id="@+id/ruletools_checkoverview"
            style="@style/inputitemlabel"
            android:layout_weight="100"
            android:text="@string/ruleaccuracycheck"
            />
    </LinearLayout>
</LinearLayout>