<?xml version="1.0" encoding="utf-8"?>
<!--suppress CheckTagEmptyBody -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/colourswatch"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/stocklist_messagebar"
            style="@style/messagebar"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stock_buttons_linearlayout"
        style="@style/standard_linearlayout">
        <TextView
            android:id="@+id/stocklist_donebutton"
            style="@style/actionbutton"
            android:layout_weight="18"
            android:text="@string/donebutton"
            />

        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/stocklist_addbutton"
            style="@style/actionbutton"
            android:layout_weight="18"
            android:text="@string/addbutton"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="62"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stocklist_productfilter_linearlayout"
        style="@style/standard_linearlayout"
        >
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/products_inputfilterlabel"
            style="@style/inputitemlabel"
            android:layout_weight="16"
            android:text="@string/filterlabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <EditText
            android:id="@+id/products_inputfilter"
            style="@style/inputitem"
            android:inputType="textFilter"
            android:layout_weight="80"
            android:hint="@string/empty"
            android:autofillHints="@string/empty"
            tools:targetApi="o" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/stocklist_stocklist_heading"
        style="@style/listview_heading_standard"
        >
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/stocklist_stocklist_heading_productname"
            style="@style/listview_heading_col_standard"
            android:layout_weight="24"
            android:text="@string/productlabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/stocklist_stocklist_heading_shopname"
            style="@style/listview_heading_col_standard"
            android:layout_weight="24"
            android:text="@string/shoplabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/stocklist_stocklist_heading_aislename"
            style="@style/listview_heading_col_standard"
            android:layout_weight="18"
            android:text="@string/aislelabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/stocklist_stocklist_heading_productcost"
            style="@style/listview_heading_col_standard"
            android:layout_weight="14"
            android:text="@string/costlabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/stocklist_stocklist_heading_productorder"
            style="@style/listview_heading_col_standard"
            android:layout_weight="8"
            android:text="@string/orderlabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
    </LinearLayout>
    <include layout="@layout/common_listviewoptions"></include>
    <ListView
        android:id="@+id/stocklist_stocklist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </ListView>
</LinearLayout>