<?xml version="1.0" encoding="utf-8"?>
<!--suppress CheckTagEmptyBody -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/colourswatch"></include>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/products_messagebar"
            style="@style/messagebar"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/standard_linearlayout"
        android:id="@+id/actions"
        >
        <TextView
            android:id="@+id/products_donebutton"
            android:layout_weight="18"
            style="@style/actionbutton"
            android:text="@string/donebutton"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/products_newproductbutton"
            android:layout_weight="18"
            style="@style/actionbutton"
            android:text="@string/addbutton"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="62"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/products_filter_linearlayout"
        style="@style/standard_linearlayout"
        >
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/products_productfilterlabel"
            style="@style/inputitemlabel"
            android:layout_weight="16"
            android:text="@string/filterlabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
             />
        <EditText
            android:id="@+id/products_inputfilter"
            style="@style/inputitem"
            android:layout_weight="80"
            android:inputType="textNoSuggestions"
            android:hint="@string/empty"
            android:autofillHints="@string/empty"
            tools:targetApi="o" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/products_productlist_heading"
        style="@style/listview_heading_standard"
        >
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/products_productlist_heading_productname"
            style="@style/listview_heading_col_standard"
            android:layout_weight="42"
            android:text="@string/productslabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/products_productlist_heading_productstorage"
            style="@style/listview_heading_col_standard"
            android:layout_weight="42"
            android:text="@string/storagelabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/products_productlist_heading_productorder"
            style="@style/listview_heading_col_standard"
            android:layout_weight="10"
            android:text="@string/orderlabel"
            />
    </LinearLayout>
    <include layout="@layout/common_listviewoptions"></include>
    <ListView
        android:id="@+id/products_productlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </ListView>
</LinearLayout>