<?xml version="1.0" encoding="utf-8"?>
<!--suppress CheckTagEmptyBody -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/colourswatch"></include>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/rules_messagebar"
            style="@style/messagebar"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/actions"
        style="@style/standard_linearlayout"
        >
        <TextView
            android:id="@+id/rules_donebutton"
            android:layout_weight="18"
            style="@style/actionbutton"
            android:text="@string/donebutton"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/rules_addbutton"
            android:layout_weight="18"
            style="@style/actionbutton"
            android:text="@string/addbutton"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="62"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rules_rulelist_heading"
        style="@style/listview_heading_standard"
        >
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/rules_rulelist_heading_rulename"
            style="@style/listview_heading_col_standard"
            android:layout_weight="24"
            android:text="@string/rulelabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/rules_rulelist_heading_productname"
            style="@style/listview_heading_col_standard"
            android:layout_weight="34"
            android:text="@string/productnamelabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/rules_rulelist_heading_acton"
            style="@style/listview_heading_col_standard"
            android:layout_weight="24"
            android:text="@string/actonlabel"
            />
        <TextView
            style="@style/inputitemdummy"
            android:layout_weight="2"
            />
        <TextView
            android:id="@+id/rules_rulelist_heading_prompt"
            style="@style/listview_heading_col_standard"
            android:layout_weight="10"
            android:text="@string/promptlabel"
            />
    </LinearLayout>
    <include layout="@layout/common_listviewoptions"></include>
    <ListView
        android:id="@+id/rules_rulelist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </ListView>
</LinearLayout>